[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Sprites/Heart.PNG" type="Texture" id=1]
[ext_resource path="res://Scripts/Interface.gd" type="Script" id=2]
[ext_resource path="res://Assets/arial.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[sub_resource type="StreamTexture" id=4]
flags = 1
load_path = "res://.import/Heart.PNG-3d72fc3f03bd8404c92ddcbdbd7c4b46.stex"

[sub_resource type="StreamTexture" id=5]
flags = 1
load_path = "res://.import/Heart.PNG-3d72fc3f03bd8404c92ddcbdbd7c4b46.stex"

[sub_resource type="StreamTexture" id=6]
flags = 1
load_path = "res://.import/Heart.PNG-3d72fc3f03bd8404c92ddcbdbd7c4b46.stex"

[sub_resource type="StreamTexture" id=7]
flags = 1
load_path = "res://.import/Heart.PNG-3d72fc3f03bd8404c92ddcbdbd7c4b46.stex"

[node name="Interface" type="Node2D"]
pause_mode = 1
z_index = -2
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Score_Text" type="Label" parent="."]
margin_left = 11.3243
margin_top = 23.3663
margin_right = 77.3243
margin_bottom = 42.3663
custom_fonts/font = SubResource( 1 )
text = "Score: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score_Number" type="Label" parent="Score_Text"]
margin_left = 50.0
margin_right = 131.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 2 )
text = "123456789"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Multiplier" type="Label" parent="Score_Text"]
margin_left = 145.478
margin_right = 185.478
margin_bottom = 19.0
custom_fonts/font = SubResource( 3 )
text = "1x"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Multiplier_Progress" type="ProgressBar" parent="."]
margin_left = 9.0
margin_top = 3.0
margin_right = 189.0
margin_bottom = 23.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Armor" type="TextureRect" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 555.964
margin_right = 42.0
margin_bottom = 587.964
texture = ExtResource( 1 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Armor2" type="TextureRect" parent="."]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 45.0
margin_top = 555.964
margin_right = 77.0
margin_bottom = 587.964
texture = SubResource( 4 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Armor3" type="TextureRect" parent="."]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 80.0
margin_top = 555.964
margin_right = 112.0
margin_bottom = 587.964
texture = SubResource( 5 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Armor4" type="TextureRect" parent="."]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 115.0
margin_top = 555.964
margin_right = 147.0
margin_bottom = 587.964
texture = SubResource( 6 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Armor5" type="TextureRect" parent="."]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 150.0
margin_top = 555.964
margin_right = 182.0
margin_bottom = 587.964
texture = SubResource( 7 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}
